# sstar2

./: .gitignore  CMakeLists.txt  README.md
.github/actions/acceptance_test/: Dockerfile  acceptance_test.sh  action.yml  entrypoint.sh
.github/actions/cmake_test/: Dockerfile  entrypoint.sh
.github/workflows/: acceptance.yml  tests.yml
include/sstar2/: population_data.h  population_data.hpp  sstar.h  validator.h  vcf_file.h  vcf_file.hpp  window.h  window_generator.h
src/: CMakeLists.txt  main.cc  population_data.cc  population_data.cpp  sstar.cc  validator.cc  vcf_file.cc  vcf_file.cpp  window.cc  window_generator.cc
tests/: CMakeLists.txt  test_population_data.cc  test_population_data.cpp  test_sstar.cc  test_validator.cc  test_vcf_entry.cc  test_vcf_file.cc  test_vcf_file.cpp  test_window.cc  test_window_generator.cc
